--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .btn-primary {
-    @apply my-3 p-3 rounded-lg w-max bg-primary text-secondary border border-[rgb(var(--primary))] hover:bg-background hover:color-primary transition;
+    @apply my-3 p-3 rounded-lg w-max bg-primary text-secondary transition-300 border border-[rgb(var(--primary))] hover:bg-background hover:color-primary;
   }
   .btn-secondary {
     @apply my-3 p-3 rounded-lg w-max bg-background color-primary hover:bg-primary hover:text-secondary transition;
